src/tests/snapshots/mu__tests__fn_call_default__default_pos_too_many_args.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Input:
fn f(a=10):
  print a

f(1,2)


# Result (error):
In code at 0..0
Error: expected at most 1 args, got 2


# Stdout:


